infra/k8s/base/api.yaml
---
# 1. The API Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: api

---
# 2. The API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1 # We will scale this up later to watch the load balancer work!
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: mdq-api:latest # The local Docker image name
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
