infra/k8s/base/worker.yaml
---
# 1. The Worker Service (For internal Prometheus scraping only)
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  labels:
    app: worker
spec:
  ports:
    - name: metrics
      port: 8081
      targetPort: 8081
  selector:
    app: worker

---
# 2. The Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 5 # You can scale this to 5 later to watch them chew through the queue!
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: mdq-worker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081 # The metrics port
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
